--- a/css/style-main.css
+++ b/css/style-main.css
@@ -121,11 +121,12 @@ letter-spacing: 1px;
 .select-title{
     margin-right: 20px; 
     font-family: Roboto;
-    font-weight: normal;
-    font-size: 16px;
+    font-weight: bold;
+    font-size: 20px;
+    text-transform: uppercase;
     line-height: 24px;
     color: #FFFFFF;
-    letter-spacing: 0.5px;
+    letter-spacing: 1px;
 }
 .choose-strategy{
     display: flex;
@@ -144,7 +145,7 @@ letter-spacing: 1px;
     margin-top: 85px;
     margin-left: 90px;
 }
-.new-game-part:after{
+/*.new-game-part:after{
     content:"";
     display: inline-block;
     position: absolute;
@@ -154,15 +155,34 @@ letter-spacing: 1px;
     height: 1px;
     transform: rotate(90deg);
     background-color:#D1CFCF;
-}
+}*/
 .select{
     width: 180px;
     outline: none;
     padding: 5px 10px;
     font-family: Roboto;
     font-weight: normal;
-    font-size: 16px;
+    font-size: 1px;
     line-height: 24px;
+}
+.choose-enemy{
+    display: flex;
+    align-items: flex-start;
+}
+.choose-oppon{
+    display: flex;
+    flex-direction: column;
+}
+.choice-label{
+    font-family: Roboto;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 24px;
+    color: #FFFFFF;
+    letter-spacing: 0.5px;
+}
+.choice{
+    margin-bottom: 15px;
 }
 
 
